--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
     "dist:dev-prod:linux": "cross-env ELECTRON_DEV_PROD=true npm run build && cross-env ELECTRON_DEV_PROD=true electron-builder --linux"
   },
   "dependencies": {
-    "@datalayer/core": "file:../core",
-    "@datalayer/jupyter-lexical": "file:../../jupyter/ui/packages/lexical",
-    "@datalayer/jupyter-react": "file:../../jupyter/ui/packages/react",
-    "@datalayer/lexical-loro": "file:../../lexical/loro",
+    "@datalayer/core": "^0.0.14",
+    "@datalayer/jupyter-lexical": "^1.0.6",
+    "@datalayer/jupyter-react": "^1.1.7",
+    "@datalayer/lexical-loro": "^0.1.0",
     "@jupyterlab/services": "^7.0.0",
     "@lexical/code": "^0.35.0",
     "@lexical/link": "^0.35.0",
