--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,16 @@
     "useUnknownInCatchVariables": true
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
-  "exclude": ["node_modules", "dist", "dist-electron"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "dist-electron",
+    "tests",
+    "tests/**/*",
+    "src/**/*.test.ts",
+    "src/**/*.test.tsx",
+    "src/**/*.spec.ts",
+    "src/**/*.spec.tsx",
+    "src/**/__tests__/**"
+  ]
 }
